[gd_scene load_steps=24 format=3 uid="uid://c6jugsafmapo3"]

[ext_resource type="Texture2D" uid="uid://d2lmq2n7hac6l" path="res://assets/textures/MapTiles/shitty.png" id="1_8vt3i"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="1_s4xu2"]
[ext_resource type="Texture2D" uid="uid://c06j3e8iveqik" path="res://assets/textures/characters/animated/sprite_03.png" id="4_6ilo3"]
[ext_resource type="Texture2D" uid="uid://cfffuw4vbo7w7" path="res://assets/textures/characters/animated/sprite_01.png" id="5_ir80a"]
[ext_resource type="Texture2D" uid="uid://b07ms6rm6yl4j" path="res://assets/textures/characters/animated/sprite_00.png" id="6_re817"]
[ext_resource type="Texture2D" uid="uid://bh8eo7t60d1k6" path="res://assets/textures/characters/animated/sprite_02.png" id="7_3jtnv"]
[ext_resource type="Texture2D" uid="uid://dhbl5uecfva8e" path="res://assets/textures/characters/animated/sprite_10.png" id="8_d0wul"]
[ext_resource type="Texture2D" uid="uid://dv4ex7sybo2yd" path="res://assets/textures/characters/animated/sprite_11.png" id="9_uy8e5"]
[ext_resource type="Texture2D" uid="uid://crt7hqpx18p00" path="res://assets/textures/characters/animated/sprite_06.png" id="10_s7pah"]
[ext_resource type="Texture2D" uid="uid://dan3c4v80q4b6" path="res://assets/textures/characters/animated/sprite_07.png" id="11_7n810"]
[ext_resource type="Texture2D" uid="uid://dua7ltv28a6eg" path="res://assets/textures/characters/animated/sprite_04.png" id="12_iqbpj"]
[ext_resource type="Script" path="res://scripts/AnimatedSprite2D.gd" id="13_ry33a"]
[ext_resource type="Texture2D" uid="uid://cry0adchexxjs" path="res://assets/textures/characters/animated/sprite_05.png" id="13_v873d"]
[ext_resource type="Texture2D" uid="uid://wshnstio01ae" path="res://assets/textures/characters/animated/sprite_08.png" id="14_jjjpa"]
[ext_resource type="Texture2D" uid="uid://6cc2kftyk0vs" path="res://assets/textures/characters/animated/sprite_09.png" id="15_l0h5t"]
[ext_resource type="Script" path="res://scripts/DialogPopup.gd" id="16_x5ruq"]
[ext_resource type="PackedScene" uid="uid://dg0q6s158wmul" path="res://scenes/npc_example.tscn" id="17_lkpne"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_01o70"]
texture = ExtResource("1_8vt3i")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_lbakv"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_01o70")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_240al"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oirre"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6ilo3")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ir80a")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_re817")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3jtnv")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_d0wul")
}, {
"duration": 1.0,
"texture": ExtResource("9_uy8e5")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_s7pah")
}, {
"duration": 1.0,
"texture": ExtResource("11_7n810")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_iqbpj")
}, {
"duration": 1.0,
"texture": ExtResource("13_v873d")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_jjjpa")
}, {
"duration": 1.0,
"texture": ExtResource("15_l0h5t")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5gcso"]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/DialogPopup/Dialog/Message:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ert8"]
_data = {
"typewriter": SubResource("Animation_5gcso")
}

[node name="Player" type="Area2D"]
script = ExtResource("1_s4xu2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lbakv")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 196615, 1, 0, 196616, 1, 0, 262153, 1, 0, 262154, 1, 0, 327691, 1, 0, 327692, 1, 0, 393228, 1, 0, 393229, 1, 0, 458766, 1, 0, 524302, 1, 0, 524303, 1, 0, 589840, 1, 0, 589841, 1, 0, 655377, 1, 0, 3, 1, 0, -65533, 1, 0, -65532, 1, 0, -131067, 1, 0, -196602, 1, 0, -196601, 1, 0, -262136, 1, 0, -327671, 1, 0, -393206, 1, 0, -393205, 1, 0, -458740, 1, 0, -458739, 1, 0, -458738, 1, 0, -524273, 1, 0, -524272, 1, 0, -589807, 1, 0, -589806, 1, 0, -589805, 1, 0, -589804, 1, 0, -589803, 1, 0, -589802, 1, 0, -589801, 1, 0, -589800, 1, 0, -589799, 1, 0, -524264, 1, 0, -458729, 1, 0, -393193, 1, 0, -327657, 1, 0, -262122, 1, 0, -196586, 1, 0, -131050, 1, 0, -65514, 1, 0, 22, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(681, 298)
script = ExtResource("13_ry33a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_240al")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_oirre")
animation = &"walk_up"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_8ert8")
}

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D"]
target_position = Vector2(0, 23)

[node name="UI" type="CanvasLayer" parent="CharacterBody2D"]

[node name="DialogPopup" type="CanvasLayer" parent="CharacterBody2D/UI"]
visible = false
script = ExtResource("16_x5ruq")

[node name="Dialog" type="ColorRect" parent="CharacterBody2D/UI/DialogPopup"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -493.0
offset_right = 98.0
offset_bottom = -399.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.345098, 0.0980392, 0.160784, 1)

[node name="NPC" type="Label" parent="CharacterBody2D/UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 295.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.698039, 0.384314, 0.270588, 1)
theme_override_font_sizes/font_size = 10
text = "Name"

[node name="Message" type="Label" parent="CharacterBody2D/UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 295.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 10
text = "Hello there!!!! Can you see meee"
autowrap_mode = 2

[node name="Response" type="Label" parent="CharacterBody2D/UI/DialogPopup/Dialog"]
layout_mode = 0
offset_left = 11.0
offset_top = 74.0
offset_right = 301.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.839216, 0.764706, 0.462745, 1)
theme_override_font_sizes/font_size = 10
text = "Answer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnedNPC" type="Node2D" parent="."]

[node name="NPC" parent="SpawnedNPC" instance=ExtResource("17_lkpne")]

[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="CharacterBody2D/UI/DialogPopup" method="_on_animation_player_animation_finished"]
